Idk fixed the word wrapping or something

--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    overflow-x: visible;
 }
 
 @font-face {
@@ -41,8 +42,9 @@ body {
 h1 {
     color: var(--primary-font-color);
     font-family: Ubuntu-Light;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: normal;
+    word-break: break-word;
 }
 
 h2 {
@@ -88,15 +90,17 @@ p.miniquote {
 .header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding-left: 2rem;
     align-items: center;
+    justify-content: space-between;
+    padding-left: 1rem;
+    overflow-x: visible;
 }
 
 .header .buttons {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     padding-right: 2rem;
 }
 
@@ -210,6 +214,7 @@ p.miniquote {
     cursor: pointer;
     -webkit-appearance: none;
     -moz-appearance: none;
+    word-break: break-word;
 }
 
 .button:hover {
